# gnome-news

./: .travis.yml  Dockerfile  broadway.sh  docker-entrypoint.sh  gnome-news.in  meson.build  meson_install.py  org.gnome.News.json
data/: HeaderBar.ui  meson.build
data/ui/: headerbar.ui  window.ui
gnomenews/: application.py  post.py  toolbar.py  tracker.py  view.py  window.py
po/: LINGUAS  ca.po  da.po  fr.po  fur.po  id.po  meson.build  pl.po  pt.po  tr.po
